--- a/exampleConfigs/spark/spark-defaults.conf
+++ b/exampleConfigs/spark/spark-defaults.conf
@@ -25,3 +25,6 @@
 # spark.serializer                 org.apache.spark.serializer.KryoSerializer
 # spark.driver.memory              5g
 # spark.executor.extraJavaOptions  -XX:+PrintGCDetails -Dkey=value -Dnumbers="one two three"
+
+spark.driver.extraClassPath   /home/ddps2110/scratch/alluxio-2.6.2/client/alluxio-2.6.2-client.jar
+spark.executor.extraClassPath /home/ddps2110/scratch/alluxio-2.6.2/client/alluxio-2.6.2-client.jar
